src/components/inputs/LabelPlaceholder.css
.nti-label-placeholder {
	display: block;
	font-family: var(--body-font-family);
	line-height: 1.375;
}

.input-wrapper {
	position: relative;
}

/*Clear the base input styles, since we need to define them on the container*/
.nti-label-placeholder :global(input:not([type=checkbox])) {
	border-radius: 0;
	background: none;
	border: none;
	color: inherit;
	font: inherit;
	padding: 0;
	height: auto;
}

.nti-label-placeholder .error-message {
	display: block;
	margin: 0.125rem 0 0.625rem;
	padding: 0 0.625rem;
	font-size: 0.75rem;
}

.nti-label-placeholder.box {
	margin-top: 0.4375rem;

	&.center {
		& .legend {
			margin-left: auto;
			margin-right: auto;
		}
	}

	& .legend {
		transform: translateY(calc(50% + 0.625rem));
	}

	& :global(input:not([type=checkbox])) {
		width: 100%;
		border-radius: 2px;
		padding: 0.625rem;


		&:focus ~ .fieldset {
			border-color: var(--secondary-green);
			& .legend {
				color: var(--secondary-green);

			}
		}

		&:placeholder-shown:not(:focus) {
			border: 1px solid var(--border-grey-light);
			& ~ .fieldset {
				border: none;
			}
		}

		&:focus ~ .fieldset .legend,
		&:not(:placeholder-shown) ~ .fieldset .legend,
		&:-webkit-autofill ~ .fieldset .legend {
			top: -0.7rem;
			font-size: 0.875rem;
			transform: translateY(0);
		}
	}

	& .label-placeholder {
		display: none;
	}

	& .fieldset {
		position: absolute;
		top: -0.625rem; bottom: 0;
		left: 0; right: 0;
		padding: 0;
		border: 1px solid var(--border-grey-light);
		margin: 0;
		border-radius: 2px;
		pointer-events: none;

		& .legend {
			padding: 0 0.625rem;
			color: var(--tertiary-grey);
			transition: font-size 0.2s, transform 0.2s;
		}
	}
}

.nti-label-placeholder.underlined {
	&.fill {
		& .label-placeholder {
			left: 0.625rem;
		}

		& :global(input:not([type=checkbox])) {
			background: #f7f7f7;
			padding-left: 0.625rem;
			padding-right: 0.625rem;
			border-radius: 5px 5px 0 0;
		}
	}

	& .label-placeholder {
		position: absolute;
		top: 50%;
		left: 0;
		transform: translateY(-50%);
		font-size: 1em;
		color: var(--tertiary-grey);
		transition: top 0.2s, font-size 0.2s, transform 0.2s;
		pointer-events: none;
	}

	& :global(input:not([type=checkbox])) {
		width: 100%;
		box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.4);
		padding: 1.5625em 0 0.625rem;
		background: none;

		&:focus {
			box-shadow: inset 0 -1px 0 0 var(--secondary-green);
		}

		&:focus + .label-placeholder {
			color: var(--secondary-green);
		}

		&:not(:placeholder-shown):not(:focus) + .label-placeholder {
			color: var(--secondary-grey);
		}

		&:focus + .label-placeholder,
		&:not(:placeholder-shown) + .label-placeholder,
		&:-webkit-autofill + .label-placeholder {
			top: 0.25rem;
			font-size: 0.875rem;
			transform: none;
		}

	}

	&.error {
		& :global(input:not([type=checkbox])) {
			/*If there's an error make sure the input has a red box-shadow*/
			&,
			&:focus {
				box-shadow: inset 0 -1px 0 0 var(--primary-red);
			}

			&:focus + .label-placeholder,
			&:not(:placeholder-shown):not(:focus) + .label-placeholder {
				color: var(--primary-red);
			}
		}
	}
}

